--- a/AULA05/TEMA/index.html
+++ b/AULA05/TEMA/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,8 @@
     <title>Array</title>
 </head>
 <body>
-    <h1>Array: Vetores e Matrizes</h1>
+    <h1>Array: vetores e matrizes</h1>
 
-    <script src="./JS/main.js"></script>
+    <script src="./JS/js.js"></script>
 </body>
 </html>
