--- a/AULA09/TEMA/index.html
+++ b/AULA09/TEMA/index.html
@@ -62,7 +62,7 @@
                     <label class="col-md-4 control-label" for="inputPrepend">Instagram</label>
                     <div class="col-md-4">
                         <div class="input-group">
-                            <input id="inputInsta" name="inputPrepend" class="form-control input-md" placeholder="" type="text">
+                            <input id="inputInsta" name="inputPrepend" class="form-control" placeholder="" type="text">
                         </div>
 
                     </div>
@@ -98,7 +98,7 @@
     </div>
 
 
-    <div class="col-md-4 mt-2 container divCentro">
+    <div class="col-md-4 container">
         <a href="#" class="btn btn-dark" onclick="exibCadastro();"></span> Exibir</a>
     </div>
 
