--- a/AULA14/DEVER/REV. AULA ANTERIOR/index.html
+++ b/AULA14/DEVER/REV. AULA ANTERIOR/index.html
@@ -1,40 +1,55 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./CSS/estilo.css">
-    <title>Trabalho Aula 14</title>
+    <title>DEVER DE CASA</title>
+    <style>
+        .card{
+            padding: 20px;
+            width: 300px;
+            position: relative;
+        }
+        .img-card{
+            width: 100%;
+        }
+        .dados-card{
+            position: absolute;
+            bottom: 52px;
+            right: 55px;
+            color: white;
+            font-size: 16pt;
+            text-shadow: 1px 1px 1px black;
+        }
+    </style>
 </head>
 <body>
+    
+<h1>Cadastro de Contatos</h1>
 
-    <h1 class="title h1">Cadastro PetShop</h1>
+<div>
+    <form id="formContato">
+        <input  type="text" 
+                id="inputNome" 
+                placeholder="Nome do Contato" />
+        <br/>
+        <input  type="tel" 
+                id="inputTelefone" 
+                placeholder="Telefone" />
+        <br/>
+        <input  type="email" 
+                id="inputEmail" 
+                placeholder="email@servidor.com" />
+        <br/>
+        <button type="button" onclick="cadastra()">
+            Cadastrar
+        </button>
+    </form>
+</div>
 
-    <section class="container mt-4">
-        <div class="container form-conteiner">
-            <form id="form-pet">
-                <input class="mb-2" type="text" id="inputNome" placeholder="Nome do animal"/>
-                <br/>
-                <input class="mb-2" type="text" id="inputEspecie" placeholder="Espécie"/>
-                <br/>
-                <input class="mb-4" type="text" id="inputServico" placeholder="Serviço"/>
-                <br/>
-                <span class="spanAgend mb-2">Agendamento</span>
-                <br/>
-                <input class="mb-4" type="datetime-local" id="inputDia"/>
-                <br/>
-                <button class="btn btn-primary mb-4" type="button" onclick="cadastrar()">Cadastrar</button>
-            </form>
-        </div>
-    </section>
+<div id="divResultados"></div>
 
-    <div class="cardDivconteiner-fluid row">
-
-    </div>
-    <div id="resultados"></div>
-
-    <script src="./JS/js.js"></script>
+<script src="./JS/js.js"></script>
 </body>
 </html>
