--- a/AULA18/DEVER/index.html
+++ b/AULA18/DEVER/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +24,17 @@
 
         <div class="CalcRow row1 row">
             <input type="text" id="visor" class="form-control input-md" disabled>
+            <button type="button" class="col-sm-3" onclick="adMemoria()">M+</button>
+            <button type="button" class="col-sm-3" onclick="limpaMemoria()">M-</button>
+            <button type="button" class="col-sm-3" onclick="pegaMemoria()">M</button>
+            <button type="button" class="col-sm-3" onclick="apagar('←')">←</button>
+        </div>
+
+        <div class="CalcRow row1 row">
             <button type="button" class="col-sm-3" onclick="numero('7')">7</button>
             <button type="button" class="col-sm-3" onclick="numero('8')">8</button>
             <button type="button" class="col-sm-3" onclick="numero('9')">9</button>
-            <button type="button" class="col-sm-3" onclick="apagar('←')">←</button>
+            <button type="button" class="col-sm-3" onclick="operador('÷')">÷</button>
         </div>
 
         <div class="CalcRow row2 row">
@@ -43,19 +52,21 @@
         </div>
 
         <div class="CalcRow row4 row">
-            <button type="button" class="col-sm-3" onclick="numero('.')">.</button>
+            <button type="button" class="col-sm-3" onclick="trocaSinal()"><i class="bi bi-file-diff"></i></button>
             <button type="button" class="col-sm-3" onclick="numero('0')">0</button>
-            <button type="button" class="col-sm-3" onclick="operador('÷')">÷</button>
+            <button type="button" class="col-sm-3" onclick="numero('.')">.</button>
             <button type="button" class="col-sm-3" onclick="operador('+')">+</button>
         </div>
 
         <div class="CalcRow row4 row">
+            <button type="button" class="col-sm-3" onclick="potencia('²')">x²</button>
             <button type="button" class="col-sm-3" onclick="raiz('√')">√</button>
             <button type="button" class="col-sm-3" onclick="porcento('%')">%</button>
-            <button type="button" class="col-sm-6" onclick="igual('=')">=</button>
+            <button type="button" class="col-sm-3" onclick="igual('=')">=</button>
         </div>
 
         <div class="CalcRow row4 row mt-2">
+            <button type="button" class="col-sm" onclick="limparVisorUlt()">CE</button>
             <button type="button" class="col-sm" onclick="limparVisor()">C</button>
         </div>
 
@@ -64,8 +75,10 @@
     <section id="histCont" class="histCont row">
         <span id="spanHist">Histórico</span>
         <a id="btnFechaHist" type="button" onclick="fechaHist()"><div class="btnFechaHist">x</div></a>
-        <div id="histSaida" class="histSaida"></div>
-        <button id="btnLimpa" type="button" class="col" onclick="limpar()">Limpar</button>
+        <div id="histSaida" class="histSaida">
+            <div id="mem"></div>
+        </div>
+        <button id="btnLimpa" type="button" class="col" onclick="limparHist()">Limpar</button>
     </section>
 
 
